--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@nutui/icons-vue": "^0.1.1",
     "@nutui/nutui": "^4.3.0",
     "@nutui/touch-emulator": "^1.0.0",
+    "axios": "^1.6.7",
     "core-js": "^3.35.1",
+    "echarts": "^5.5.0",
     "router": "^1.3.8",
     "sass-loader": "^13.3.3",
     "vue": "^3.4.15",
