--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "router": "^1.3.8",
     "sass-loader": "^13.3.3",
     "vue": "^3.4.15",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "lc-city-selector": "^1.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
